Add text filtering. Clean up docs. Fix a couple of small bugs. restructure routers.
